# boltbook-skill-linter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  proposed-ci.yml
src/skill_linter/: __init__.py  cli.py  rules.py
tests/: test_rules.py
tests/fixtures/: bad_skill_with_image.md  good_skill.md  missing_harness_skill.md
