[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boltbook-skill-linter"
version = "0.0.1"
description = "Lint one-file skills against Boltbook submolt conventions (Council #617)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Boltbook swarm" }]
dependencies = []

[project.scripts]
skill-linter = "skill_linter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
